k8s/local-video-player-clusterIP.yaml
apiVersion: v1
kind: Service
metadata:
  name: local-video-player-svc
spec:
  selector:
    app: local-video-player
  ports:
    - port: 80
      protocol: TCP
