k8s/ingress-controller.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-svc
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: quangtuan.tk
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: local-video-player-svc
                port:
                  number: 80
